2008-09-18  Simon Budig  <simon@gimp.org>

	* app/core/gimpcurve.c: comment fix

	* app/gegl/gimplevelsconfig.c: improve the levels->curves
	transition. Not perfect, the result does not match a "real"
	gamma correction, especially in the dark areas, where the
	curves are too dark compared to the levels.

2008-09-18  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/edge-dog.c: the plug-in can only run on layers,
	not masks and channels. Added a check for this and bail out with
	an error message. Fixes bug #552625.

	* plug-ins/common/curve-bend.c: return error messages via the
	procedure's return values.

2008-09-18  Sven Neumann  <sven@gimp.org>

	* app/plug-in/gimppluginprocedure.c
	* libgimp/gimp.c: minor cleanups.

2008-09-18  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu-scripts.c (script_fu_script_proc):
	don't leak the GError.

2008-09-18  Michael Natterer  <mitch@gimp.org>

	Bug 552785 – Script-fu run errors do not show in UI

	* plug-ins/script-fu/script-fu-scripts.c (script_fu_script_proc):
	fix the code that passes the error message back via the pipe.

2008-09-18  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu-scripts.c (script_fu_run_command):
	plugged a memory leak.

	* plug-ins/script-fu/script-fu-console.c
	* plug-ins/script-fu/script-fu-server.c: minor cleanup.

2008-09-18  Michael Natterer  <mitch@gimp.org>

	* plug-ins/script-fu/script-fu-script.[ch]: add new functions
	script_fu_script_collect_standard_args(),
	script_fu_script_get_command() and
	script_fu_script_get_command_from_params().

	* plug-ins/script-fu/script-fu-scripts.c: remove the resp. code
	here and use above functions instead.

	* plug-ins/script-fu/script-fu-interface.c (script_fu_ok): changed
	loop over args to only copy all widget content into the script's
	values and then call script_fu_script_get_command().

2008-09-18  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpdock.c (gimp_dock_style_set): reset the RC